# Git-Sync-d-CLI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/common/: cli.cpp  cli.h  log.cpp  log.h
src/unix/: ipc.h
src/windows/: ipc.cpp  ipc.h
